--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,19 @@ h2.b2 {
   padding-top: 94px;
 }
 
+.hiddenh2 {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 h3.c {
   font-weight: 700;
   color: #212121;
